--- a/src/Styles/post.css
+++ b/src/Styles/post.css
@@ -12,6 +12,7 @@ flex-direction: column;
     margin:1rem;
     width: 50%;
     margin: 0 auto;
+    hyphens: auto;
 }
 .avatar{
     margin-top: -2rem;
@@ -22,9 +23,32 @@ flex-direction: column;
     margin-bottom: 2rem;
     
 }
+.post__text{
+    display: -webkit-box;
+    word-break: break-all;
+    padding-right: 1rem;
+
+}
+.post__titel {
+    display: -webkit-box;
+    word-break: break-all;
+    padding: 0;
+    margin: 0;
+    color: #4dc875;
+}
 .post__icons{
     margin-left: 16.6rem;
 }
 .post__iconDele:hover{
 color: #4dc875;
+}
+
+@media screen and (max-width:600px) {
+    .post__body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        width: 100%;
+    }
 }
